Images: optimized the images and updated the css to use the latest auth image which is smaller in size.

--- a/resources/css/_App.scss
+++ b/resources/css/_App.scss
@@ -1,7 +1,7 @@
 $aside_width: 15%;
 
 .app_main {
-    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url('../../public/assets/images/auth.png');
+    background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url('../../public/assets/images/auth.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
