Dorms: added CRUD functionality for dorms.

--- a/resources/css/_Authentication.scss
+++ b/resources/css/_Authentication.scss
@@ -2,7 +2,7 @@
     @include flex_center;
     height: 90dvh;
     padding: 0 10px;
-    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../../public/assets/images/auth.png');
+    background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url('../../public/assets/images/auth.jpg');
     background-size: cover;
     background-position: center;
     
