--- a/resources/css/__tables.scss
+++ b/resources/css/__tables.scss
@@ -5,7 +5,7 @@ $thead_background: #fff;
     border-spacing: 0;
     border-collapse: collapse;
     color: #fff;
-    overflow: auto;
+    // overflow: auto;
 
     thead {
         background: $thead_background;
