--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -413,7 +413,6 @@ footer .copyright {
   border-spacing: 0;
   border-collapse: collapse;
   color: #fff;
-  overflow: auto;
 }
 .table thead {
   background: #fff;
@@ -803,7 +802,7 @@ footer .copyright {
   justify-content: center;
   height: 90dvh;
   padding: 0 10px;
-  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../public/assets/images/auth.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1)), url("../../public/assets/images/auth.jpg");
   background-size: cover;
   background-position: center;
 }
@@ -855,7 +854,7 @@ footer .copyright {
   }
 }
 .app_main {
-  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("../../public/assets/images/auth.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url("../../public/assets/images/auth.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
@@ -910,7 +909,6 @@ footer .copyright {
 }
 .app_main .app_content .body {
   color: #fff;
-  overflow: scroll;
 }
 .app_main .app_content .system_nav {
   margin: 0 0 0.5em;
