--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -212,9 +212,16 @@ aside a {
   color: #fff;
   text-decoration: none;
 }
+aside .brand .profile img {
+  width: 40px;
+  height: 40px;
+  padding: 2px;
+  border-radius: 50%;
+  border: 1px solid green;
+}
 aside ul {
   list-style: none;
-  margin: 0.8em 0 0;
+  margin: 0.4em 0 0;
 }
 aside ul li {
   padding: 4px;
@@ -235,14 +242,7 @@ aside ul li:hover a {
 }
 aside .footer {
   position: absolute;
-  bottom: 2em;
-}
-aside .footer .profile img {
-  width: 40px;
-  height: 40px;
-  padding: 2px;
-  border-radius: 50%;
-  border: 1px solid green;
+  bottom: 1.2em;
 }
 aside .footer .logout {
   margin: 0.5em 0 0;
@@ -262,42 +262,48 @@ aside .footer .logout form button i {
   aside i {
     font-size: 0.95em;
   }
-  aside .brand a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  aside .brand {
+    padding: 0.4em 0;
+  }
+  aside .brand .profile {
+    display: grid;
+    grid-template-columns: 40px auto;
     gap: 0.2em;
-    font-size: 1.2em;
+    align-items: center;
+    justify-content: start;
+  }
+  aside .brand .profile img {
+    width: 35px;
+    height: 35px;
+  }
+  aside .brand .profile a {
     font-weight: bold;
   }
+  aside .brand .profile span {
+    font-size: 0.85em;
+    color: #fff;
+  }
   aside ul {
-    margin: 1.8em 0;
+    margin: 1.2em 0;
   }
   aside ul li {
-    border-bottom: 1px solid rgb(204, 204, 204);
+    border-bottom: 1px solid #404040;
   }
   aside ul li a {
     display: flex;
     align-items: center;
     gap: 0.2em;
+    font-size: 0.96em;
+    letter-spacing: 0.2px;
   }
   aside .footer {
     left: 0;
     margin: 0 0.4em 0;
   }
-  aside .footer .profile,
   aside .footer .logout button {
     display: flex;
     align-items: center;
     gap: 0.3em;
-  }
-  aside .footer .profile img {
-    width: 35px;
-    height: 35px;
-  }
-  aside .footer .profile span {
-    font-size: 0.8em;
-    color: #fff;
   }
   aside .footer .logout form button {
     justify-content: center;
