--- a/resources/css/___buttons.scss
+++ b/resources/css/___buttons.scss
@@ -1,17 +1,22 @@
+form button,
+.btn {
+    border: none;
+    border-radius: 4px;
+    background: $button_background;
+    color: #fff;
+    padding: 8px 12px;
+    font-weight: bold;
+    font-size: 1em;
+
+    &:hover {
+        opacity: 0.85;
+    }
+}
+
+
 form {
     button {
         margin: 0.5em 0;
-        border: none;
-        border-radius: 4px;
-        background: $button_background;
-        color: #fff;
-        padding: 8px 12px;
-        font-weight: bold;
-        font-size: 1em;
-
-        &:hover {
-            opacity: 0.85;
-        }
     }
 }
 
