Admin / Students: Added the functionality for admins to be able to view the results of students.

--- a/resources/css/__forms.scss
+++ b/resources/css/__forms.scss
@@ -60,6 +60,20 @@ $custom_form_padding: 24px;
                } 
             }
         }
+
+        .table {
+            thead {
+                background: #000;
+                
+                th {
+                    color: #fff;
+                }
+            }
+
+            tbody{
+                color: #000;
+            }
+        }
     }
 
     form {
