--- a/resources/css/styles.scss
+++ b/resources/css/styles.scss
@@ -9,6 +9,7 @@
 @import "_alerts";
 @import "_tables";
 @import "_forms";
+@import "_cards";
 
 @import "Home_Page";
 @import "Contact_Page";
@@ -19,3 +20,4 @@
 @import "Settings";
 @import "Prints";
 @import "Payments";
+@import "Blogs";
